[package]
name = "ssh2-rs-bench"
version = "0.1.0"
authors = ["Sathiyan Sivathas <sathiyan.sivathas@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

[[bin]]
name = "ssh2"
path = "src/ssh2.rs"

[[bin]]
name = "async-ssh2"
path = "src/async_ssh2.rs"

[dependencies]
anyhow = "1"
async-ssh2 = "0.1.1-beta"
smol = "0.1"
ssh2 = "0.8"
